# cpp-advanced-hse

./: .gitignore  .grader-ci.yml  CMakeLists.txt  README.md  run-clang-format.py  run_linter.sh  submit.py
tasks/: CMakeLists.txt
tasks/baby-threads/: CMakeLists.txt
tasks/baby-threads/hash-table/: .tester.json  CMakeLists.txt  commons.h  concurrent_hash_map.h  readme.md  run.cpp  scorer.py  test.cpp
tasks/baby-threads/is-prime/: .tester.json  CMakeLists.txt  is_prime.cpp  is_prime.h  readme.md  run.cpp  scorer.py  test.cpp
tasks/baby-threads/reduce/: .tester.json  CMakeLists.txt  commons.h  readme.md  reduce.h  run.cpp  test.cpp
tasks/baby-threads/subset-sum/: .tester.json  CMakeLists.txt  commons.h  find_subsets.cpp  find_subsets.h  readme.md  run.cpp  scorer.py  test.cpp
tasks/bonus/: CMakeLists.txt
tasks/bonus/bad-hash/: .tester.json  CMakeLists.txt  main.cpp  readme.md
tasks/bonus/bad-rand/: .tester.json  CMakeLists.txt  readme.md  run.cpp
tasks/bonus/clang-fun/: .tester.json  CMakeLists.txt  print.h  readme.md  run_tests.sh
tasks/bonus/executors/: .tester.json  CMakeLists.txt  README.md  executors.cpp  executors.h  run.cpp  test_executors.cpp  test_future.cpp
tasks/bonus/functional-world/: .tester.json  CMakeLists.txt  functions.h  readme.md  test.cpp
tasks/bonus/hack-cpp-1.0/: .tester.json  CMakeLists.txt  call_private.h  polymorphism.h  readme.md  test_call_private.cpp  test_polymorphism.cpp  test_polymorphism.hpp
tasks/bonus/matrix-2.0/: .tester.json  CMakeLists.txt  matrix.h  readme.md  test.cpp
tasks/bonus/solve-or-die/: .tester.json  CMakeLists.txt  readme.md  status.cc  status.h  status_builder.cc  status_builder.h  status_internal.h  status_macros.h  status_payload_printer.cc  status_payload_printer.h  statusor.cc  statusor.h  statusor_internal.h  test.cpp
tasks/condvars/: CMakeLists.txt
tasks/condvars/buffered-channel/: .tester.json  CMakeLists.txt  bench.cpp  buffered_channel.h  readme.md  scorer.py  test.cpp
tasks/condvars/rw-lock/: .tester.json  CMakeLists.txt  readme.md  run.cpp  rw_lock.h  scorer.py  test.cpp
tasks/condvars/semaphore/: .tester.json  CMakeLists.txt  readme.md  sema.h  test.cpp
tasks/condvars/timerqueue/: .tester.json  CMakeLists.txt  README.md  \  timerqueue.h  timerqueue_test.cpp
tasks/condvars/unbuffered-channel/: .tester.json  CMakeLists.txt  bench.cpp  readme.md  scorer.py  test.cpp  unbuffered_channel.h
tasks/errors/: CMakeLists.txt
tasks/errors/defer/: .tester.json  CMakeLists.txt  defer.h  readme.md  test.cpp
tasks/errors/grep/: .tester.json  CMakeLists.txt  grep.h  readme.md  test.cpp  test.txt  utf8.h  тест.txt
tasks/errors/safe-transform/: .tester.json  CMakeLists.txt  readme.md  test.cpp  transform.h
tasks/errors/tryhard/: .tester.json  CMakeLists.txt  readme.md  test.cpp  try.h
tasks/intro/: CMakeLists.txt
tasks/intro/gcd/: .tester.json  CMakeLists.txt  main  main.cpp  readme.md
tasks/intro/multiplication/: .tester.json  CMakeLists.txt  multiplication.cpp  multiplication.h  readme.md  test.cpp
tasks/jpeg-decoder/: CMakeLists.txt  readme.md
tasks/jpeg-decoder/baseline/: .tester.json  CMakeLists.txt  README.md  decoder.cpp  sources.cmake
tasks/jpeg-decoder/faster/: .tester.json  CMakeLists.txt  README.md  fft.cpp  huffman.cpp  sources.cmake
tasks/jpeg-decoder/fftw/: .tester.json  CMakeLists.txt  README.md  sources.cmake
tasks/jpeg-decoder/fuzzing/: README.md
tasks/jpeg-decoder/huffman/: .tester.json  CMakeLists.txt  README.md  sources.cmake
tasks/jpeg-decoder/include/: decoder.h  fft.h  huffman.h
tasks/jpeg-decoder/progressive/: .tester.json  CMakeLists.txt  README.md  decoder.cpp  dummy.h  sources.cmake
tasks/jpeg-decoder/utils/: FuzzDataProvider.h  image.h  libjpg_reader.cpp  libjpg_reader.hpp  logger_init.cpp  png_encoder.cpp  png_encoder.hpp  test_commons.cpp  test_commons.hpp
tasks/lock-free/: CMakeLists.txt
tasks/lock-free/fast-queue/: .tester.json  CMakeLists.txt  mpmc.h  readme.md  run.cpp  scorer.py  test.cpp
tasks/lock-free/futex/: .tester.json  CMakeLists.txt  bench.cpp  mutex.h  readme.md  scorer.py  test.cpp
tasks/lock-free/hazard-ptr/: .tester.json  CMakeLists.txt  README.md  hazard_ptr.h  hazard_ptr_bench.cpp  hazard_ptr_test.cpp  scorer.py
tasks/lock-free/mpsc-stack/: .tester.json  CMakeLists.txt  README.md  mpsc_stack.h  mpsc_stack_bench.cpp  mpsc_stack_test.cpp
tasks/lock-free/rw-spinlock/: .tester.json  CMakeLists.txt  readme.md  run.cpp  rw_spinlock.h  test.cpp
tasks/lock-free/sync-map/: .tester.json  CMakeLists.txt  README.md  hazard_ptr.cpp  sync_map.h  sync_map_bench.cpp  sync_map_test.cpp
tasks/memory/: CMakeLists.txt
tasks/memory/dedup/: .tester.json  CMakeLists.txt  README.md  dedup.h  test.cpp
tasks/memory/deque/: .tester.json  CMakeLists.txt  deque.h  readme.md  test.cpp
tasks/memory/intrusive-list/: .tester.json  CMakeLists.txt  intrusive_list.h  readme.md  test.cpp
tasks/memory/lru-cache/: .tester.json  CMakeLists.txt  lru_cache.cpp  lru_cache.h  readme.md  test.cpp
tasks/memory/string-view/: .tester.json  CMakeLists.txt  readme.md  string_view.h  test.cpp
tasks/meta/: CMakeLists.txt
tasks/meta/compile-eval/: .tester.json  CMakeLists.txt  another_pow.h  determinant.h  hash.h  next_prime.h  pow.h  readme.md  sqrt.h  test_constexpr.cpp  test_constexpr_simple.cpp  test_templates.cpp
tasks/meta/constexpr-map/: .tester.json  CMakeLists.txt  constexpr_map.h  constexpr_string.h  readme.md  sort.h  test.cpp
tasks/meta/function-ref/: .tester.json  CMakeLists.txt  function_ref.h  readme.md  test.cpp
tasks/move/: CMakeLists.txt
tasks/move/compressed-pair/: .tester.json  :w  CMakeLists.txt  compressed_pair.h  readme.md  test.cpp
tasks/move/cow-vector/: .tester.json  CMakeLists.txt  README.md  cow_vector.cpp  cow_vector.h  cow_vector_test.cpp
tasks/move/harakiri/: .tester.json  CMakeLists.txt  harakiri.cpp  harakiri.h  (+2 more)
tasks/patterns/: CMakeLists.txt
tasks/scheme/: CMakeLists.txt  README.md
tasks/smart-ptrs/: CMakeLists.txt  readme.md
tasks/types/: CMakeLists.txt
tasks/unassigned/: CMakeLists.txt
(+694 files in other folders)
